2004-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (ActivateWindow): SetFocus to grab window when
	clicking outside the grab window hierarchy. [Bug 220908]

2004-09-10  Vince Darley  <vincentdarley@users.sourceforge.net>

	TIP#169 IMPLEMENTATION

	* doc/text.n, generic/tkTest.c, generic/tkText.c, generic/tkText.h:
	* generic/tkTextBTree.c, generic/tkTextDisp.c, generic/tkTextImage.c:
	* generic/tkTextIndex.c, generic/tkTextMark.c, generic/tkTextTag.c:
	* generic/tkTextWind.c, generic/tkUndo.c, generic/tkUndo.h:
	* library/text.tcl, library/demos/twind.tcl, library/demos/widget:
	* tests/text.test, tests/textImage.test, tests/textIndex.test:
	* tests/textWind.test: implementation of TIP#169, which provides
	the new '$text peer' widget subcommand.  This includes new
	documentation, tests, and an extension to the text widget demos
	to illustrate some of the new features.  Many thanks also to
	Brian Griffin for the initial implementation.

2004-09-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/panedwindow.test: bulletproof 23.2 result [Bug #1019100]

	* win/tkWinWm.c (ReadIconFromFile): when using SHGetFileInfo to
	retrieve icon, get regular icon as well for correct Alt-Tab icon.

2004-09-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/wish.1: Added note that the -use option is linked to the
	frame's -container option to help with [Bug 1024364]

2004-09-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkfbox.tcl (::tk::dialog::file::Create): use label
	instead of button for "File of type", as it properly handles
	-state disabled now.

2004-09-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Set TK_LIBRARY when execing Tk apps (test, 
	runtest, rundemo).

2004-09-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* macosx/tkMacOSXMenus.c (GenerateEditEvent): 
	* macosx/tkMacOSXMenu.c (MenuSelectEvent): 
	* win/tkWinMenu.c (MenuSelectEvent): Make sure everywhere that