@@ -2,7 +2,7 @@
 #
 # This demonstration script prompts the user to select a file.
 #
-# RCS: @(#) $Id: filebox.tcl,v 1.4 2003/08/20 23:02:18 hobbs Exp $
+# RCS: @(#) $Id: filebox.tcl,v 1.5 2004/09/10 20:46:19 dkf Exp $
 
 if {![info exists widgetDemo]} {
     error "This script should be run from the \"widget\" demo."
@@ -33,10 +33,14 @@ foreach i {open save} {
     pack $f -fill x -padx 1c -pady 3
 }
 
-if {![string compare $tcl_platform(platform) unix]} {
+if {$tcl_platform(platform) eq "unix"} {
     checkbutton $w.strict -text "Use Motif Style Dialog" \
 	-variable tk_strictMotif -onvalue 1 -offvalue 0
     pack $w.strict -anchor c
+
+    # This binding ensures that we don't run the rest of the demos
+    # with motif style interactions
+    bind $w.strict <Destroy> {set tk_strictMotif 0}
 }
 
 proc fileDialog {w ent operation} {
